Added after first try

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,18 @@ spring:
       properties:
         hibernate:
           dialect: org.hibernate.dialect.PostgreSQLDialect
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 389097768829-fon0p57cuk3ajmuh1rq6o34rud8c8krb.apps.googleusercontent.com
+            client-secret: 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
+            redirect-uri: http://localhost:8080/login/oauth2/code/google
+            scope:
+              - profile
+              - email
+
 
 logging:
   level:
